--- a/client/react-app/styles/sections/HeroSection.scss
+++ b/client/react-app/styles/sections/HeroSection.scss
@@ -13,6 +13,9 @@
 	}
 
 	.hero_content {
+		@media screen and (min-width: 2000px) {
+			max-width: 1700px;
+		}
 		position: relative;
 		z-index: 10;
 		/* Content above falling hearts */
@@ -42,11 +45,7 @@
 			height: 100vh;
 			padding: 0 4vw;
 		}
-
-		@media screen and (max-width: 500px) and (max-height: 700px) {
-			justify-content: flex-start;
-			top: 5vh;
-		}
+	
 		@media screen and (max-width: 576px) {
 			padding: 0 2vw;
 		}
@@ -58,6 +57,7 @@
 			@media screen and (max-width: 576px) {
 				gap: 10px;
 			}
+			
 		}
 
 		.hero_content_dear {
@@ -111,8 +111,12 @@
 			@media screen and (max-width: 450px) {
 				font-size: 1.1em;
 			}
-			@media screen and (max-width: 375px) {
+			@media screen and (max-width: 400px) {
+				padding: 0 2vw;
 				font-size: 1em;
+			}
+			@media screen and (max-width: 375px) {
+				font-size: 0.9em;
 			}
 		}
 
@@ -124,7 +128,7 @@
 
 			.child_photo {
 				@media screen and (min-width: 2000px) and (min-height: 800px) {
-					height: 70vh !important;
+					height: 800px !important;
 				}
 				position: relative;
 				height: 650px;
