--- a/client/react-app/styles/sections/InvitationFooter.scss
+++ b/client/react-app/styles/sections/InvitationFooter.scss
@@ -1,28 +1,68 @@
 .invitation_footer {
 	position: relative;
-	width: 100%;
-	text-align: center;
 	background-color: white;
-	padding: 200px 2rem;
-	padding-top: 0;
+	padding: 0 2rem;
+	padding-bottom: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	height: 700px;
+
 	@media screen and (max-width: 1200px) {
-		padding-top: 250px;
 		font-size: 0.85em;
+	}
+	@media screen and (max-width: 768px) {
+		padding: 0 2vw;
+	padding-bottom: 100px;
+	}
+	@media screen and (max-width: 576px) {
+	height: 600px;
+	padding-bottom: 30px;
 	}
 	p {
 		font-size: 2em;
 		margin-bottom: 16px;
 		color: #2c3e50;
 		line-height: 1.4;
+		text-align: center;
+
 		@media screen and (max-width: 992px) {
 			padding: 0 4vw;
 		}
+		@media screen and (max-width: 768px) {
+		font-size: 1.7em;
+		}
+		@media screen and (max-width: 576px) {
+		font-size: 1.4em;
+		}
+			@media screen and (max-width: 400px) {
+		font-size: 1.2em;
+		}
+		
+		
 	}
 
 	strong {
 		@include headerWithRay($size: 80px, $offset: 30px);
 		color: $primary-color;
-
+		@media screen and (max-width: 768px) {
+			@include headerWithRay($size: 60px, $offset: 26px);
+			font-size: 3.7rem !important;
+		}
+		@media screen and (max-width: 576px) {
+			@include headerWithRay($size: 50px, $offset: 24px);
+			font-size: 3.2rem !important;
+		}
+		@media screen and (max-width: 450px) {
+			@include headerWithRay($size: 45px, $offset: 20px);
+			font-size: 2.8rem !important;
+		}
+		@media screen and (max-width: 400px) {
+			@include headerWithRay($size: 40px, $offset: 18px);
+			font-size: 2.6rem !important;
+		}
 		&::before,
 		&::after {
 			filter: $pinkFilter;
@@ -34,7 +74,11 @@
 		color: $primary-color;
 		position: absolute;
 		left: 0;
-		bottom: 10px;
 		right: 0;
+		bottom: 10px;
+		text-align: center;
+		@media screen and (max-width: 400px) {
+			font-size: 1em;
+			}
 	}
 }
