--- a/client/react-app/styles/common/loader.scss
+++ b/client/react-app/styles/common/loader.scss
@@ -5,10 +5,10 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	inset: 0;
-	z-index: 9999;
+	z-index: 999999;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -22,8 +22,8 @@
 		justify-content: center;
 		align-items: center;
 		flex-direction: row;
-		opacity: 0;            /* start invisible */
-		transform: scale(0.8); 
+		opacity: 0; /* start invisible */
+		transform: scale(0.8);
 	}
 
 	&__heart {
@@ -31,7 +31,7 @@
 		height: 100%;
 		fill: #ff9aff;
 		z-index: 1;
-		transform-origin: center center;  
+		transform-origin: center center;
 	}
 
 	&__text-container {
@@ -42,16 +42,16 @@
 		pointer-events: none;
 		width: 220px;
 		z-index: 3;
-		opacity: 0; 
+		opacity: 0;
 	}
 
 	&__text {
 		display: block; /* ensure width/height apply predictably */
 		width: 220px; /* force 200 px wide */
 		height: auto !important;
-g{
-	transform: scale(0.9) translateX(1px);
-}
+		g {
+			transform: scale(0.9) translateX(1px);
+		}
 		path {
 			fill: none !important; // ← remove fill
 			stroke: $primary-color !important;
