--- a/client/react-app/styles/main.scss
+++ b/client/react-app/styles/main.scss
@@ -6,46 +6,19 @@
 }
 
 html {
-	scroll-behavior: smooth;
 	font-size: 16px;
+	scrollbar-width: 16px;                      /* Firefox */
+	scrollbar-color: $pink-color $primary-color;     
 }
-
 body {
-	overflow: hidden;
-	margin: 0;
-	padding: 0;
-	scroll-behavior: smooth;
 	background-color: white;
 	font-size: 1.5em;
 	font-family: $fRegular;
-
-	&::-webkit-scrollbar {
-		width: 16px;
-	}
-
-	&::-webkit-scrollbar-track {
-		background: #f7f3f4;
-		background: #f7f3f4;
-	}
-
-	&::-webkit-scrollbar-thumb {
-		border-radius: 10px;
-		width: 16px;
-		border-radius: 10px;
-		background: -webkit-gradient(
-			linear,
-			left top,
-			left bottom,
-			from(#f2726c),
-			to(#7675fd)
-		);
-		background: linear-gradient(180deg, $pink-color, $primary-color);
-	}
+	overflow-x: hidden;
+	overflow-y: auto; 
 }
 html,
 body {
-	height: 100%;
-	overflow: hidden; /* ↪️ disable all native scrolling */
 	margin: 0;
 	padding: 0;
 }
@@ -74,6 +47,7 @@ section {
 }
 main {
 	position: relative;
+
 	button {
 		@include button-custom(1);
 
@@ -123,109 +97,8 @@ input {
 		display: inline-block;
 	}
 }
-
-/*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
-html.has-scroll-smooth {
+#lenis-wrapper{
 	overflow: hidden;
-	background-color: white;
-}
-
-html.has-scroll-dragging {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.has-scroll-smooth body {
-	overflow: hidden;
-	background-color: white;
-}
-
-.has-scroll-smooth [data-scroll-container] {
-	min-height: 100vh;
-	background-color: white;
-}
-
-[data-scroll-direction="horizontal"] [data-scroll-container] {
-	height: 100vh;
-	display: inline-block;
-	white-space: nowrap;
-}
-
-[data-scroll-direction="horizontal"] [data-scroll-section] {
-	display: inline-block;
-	vertical-align: top;
-	white-space: nowrap;
-	height: 100%;
-}
-
-.c-scrollbar {
-	position: absolute;
-	right: 0;
-	top: 0;
-	width: 16px;
-	height: 100%;
-	transform-origin: center right;
-	transition: transform 0.3s, opacity 0.3s;
-	opacity: 0;
-	z-index: 1000;
-
-	&:last-of-type {
-		display: none !important;
-	}
-}
-
-.c-scrollbar:hover {
-	transform: scaleX(1.45);
-}
-
-.c-scrollbar:hover,
-.has-scroll-scrolling .c-scrollbar,
-.has-scroll-dragging .c-scrollbar {
-	opacity: 1;
-}
-
-[data-scroll-direction="horizontal"] .c-scrollbar {
-	width: 100%;
-	height: 10px;
-	top: auto;
-	bottom: 0;
-	transform: scaleY(1);
-	background-color: white;
-	z-index: 1200;
-}
-
-[data-scroll-direction="horizontal"] .c-scrollbar:hover {
-	transform: scaleY(1.3);
-}
-
-.c-scrollbar_thumb {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 16px;
-	cursor: -webkit-grab;
-	cursor: grab;
-	border-radius: 10px;
-	background: -webkit-gradient(
-		linear,
-		left top,
-		left bottom,
-		from(#f2726c),
-		to(#7675fd)
-	);
-	background: linear-gradient(180deg, #f2726c, #7675fd);
-}
-
-.has-scroll-dragging .c-scrollbar_thumb {
-	cursor: -webkit-grabbing;
-	cursor: grabbing;
-}
-
-[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
-	right: auto;
-	bottom: 0;
 }
 
 @import "./common/loader.scss";
