--- a/client/react-app/styles/sections/DressCodeBlock.scss
+++ b/client/react-app/styles/sections/DressCodeBlock.scss
@@ -294,20 +294,31 @@
 			}
 
 			// Each nth-child gets a different heart mask + position
-			// .color_item:nth-child(3n + 1) .colorImage {
-			// 	-webkit-mask: url("../../img/dresscode/dresscode_heart_mask.svg") no-repeat center / contain;
-			// 	mask: url("../../img/dresscode/dresscode_heart_mask.svg") no-repeat center / contain;
-			// }
+			// 1. Encode each SVG as a data-URI and store in a variable.
+			//    (Here I’ve URL-encoded the SVGs and wrapped them in quotes.)
 
-			// .color_item:nth-child(3n + 2) .colorImage {
-			// 	-webkit-mask: url("../../img/dresscode/dresscode_heart_mask_1.svg") no-repeat center / contain;
-			// 	mask: url("../../img/dresscode/dresscode_heart_mask_1.svg") no-repeat center / contain;
-			// }
+			$heart-mask-1: "data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2050%2053.89'%3E%3Cpath%20fill='%23fff'%20d='M28.98,9.49a14.35,14.35,0,0,1,4.75-5.07,9.73,9.73,0,0,1,13,1.9c4.18,5.15,3.95,10.65,1.36,16.34a35.8,35.8,0,0,1-9.57,12.19,42.65,42.65,0,0,0-10.5,13.85c-.74,1.53-1.55,3-2.37,4.53-.46.83-.93.86-1.38.1-3-5-7.21-8.73-11.47-12.49a47.4,47.4,0,0,1-8.83-9.45,23.8,23.8,0,0,1-3.84-10.46,21.49,21.49,0,0,1,2.65-13.39,16.82,16.82,0,0,1,3.44-4,14.81,14.81,0,0,1,7.86-3.46,13.28,13.28,0,0,1,8.5,1.89,12.86,12.86,0,0,1,5,4.74C28.14,7.61,28.52,8.54,28.98,9.49Z'%3E%3C/path%3E%3C/svg%3E";
 
-			// .color_item:nth-child(3n) .colorImage {
-			// 	-webkit-mask: url("../../img/dresscode/dresscode_heart_mask_2.svg") no-repeat center / contain;
-			// 	mask: url("../../img/dresscode/dresscode_heart_mask_2.svg") no-repeat center / contain;
-			// }
+			$heart-mask-2: "data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2013.03%2014.02'%3E%3Cpath%20fill='%23fff'%20d='M5.78,2.26a3.80,3.80,0,0,0-1.01-1.54,2.57,2.57,0,0,0-3.47-0.10c-1.32,1.15-1.51,2.60-1.10,4.20a9.47,9.47,0,0,0,1.94,3.61,11.28,11.28,0,0,1,2.11,4.09c0.12,0.43,0.27,0.85,0.41,1.29,0.08,0.24,0.20,0.27,0.36,0.09,1.01-1.17,2.28-1.95,3.56-2.73a12.54,12.54,0,0,0,2.73-2.06,6.30,6.30,0,0,0,1.48-2.55,5.69,5.69,0,0,0-0.08-3.61,4.45,4.45,0,0,0-0.71-1.20,3.92,3.92,0,0,0-1.89-1.26,3.51,3.51,0,0,0-2.30,0.11,3.40,3.40,0,0,0-1.52,1.01c-0.19,0.21-0.33,0.43-0.49,0.66Z'%3E%3C/path%3E%3C/svg%3E";
+
+			$heart-mask-3: "data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2013.39%2013.99'%3E%3Cpath%20fill='%23fff'%20d='M6.15,2.22c-0.28-0.55-0.69-1.03-1.20-1.39-1.07-0.79-3.22-0.28-4.10,0.72-1.16,1.32-0.97,2.98-0.35,4.51s1.53,2.73,2.56,3.65c1.13,1.06,2.33,1.46,2.93,2.89,0.18,0.41,0.38,0.81,0.58,1.22,0.11,0.22,0.24,0.24,0.36,0.04,0.85-1.29,1.98-2.92,3.15-3.87,0.92-0.69,1.60-1.23,2.30-2.14,0.59-0.81,0.77-1.39,0.92-2.37,0.21-1.22,0.06-2.09-0.51-3.19-0.23-0.41-0.74-0.94-1.08-1.26-0.57-0.53-0.81-0.62-1.76-0.94-0.78-0.12-1.34-0.18-2.03,0.21-0.56,0.27-1.03,0.68-1.37,1.20-0.16,0.23-0.27,0.47-0.40,0.72Z'%3E%3C/path%3E%3C/svg%3E";
+
+			// 2. Apply them in your .color_item rules:
+
+			.color_item:nth-child(3n + 1) .colorImage {
+				-webkit-mask: url("#{$heart-mask-1}") no-repeat center / contain;
+				mask: url("#{$heart-mask-1}") no-repeat center / contain;
+			}
+
+			.color_item:nth-child(3n + 2) .colorImage {
+				-webkit-mask: url("#{$heart-mask-2}") no-repeat center / contain;
+				mask: url("#{$heart-mask-2}") no-repeat center / contain;
+			}
+
+			.color_item:nth-child(3n) .colorImage {
+				-webkit-mask: url("#{$heart-mask-3}") no-repeat center / contain;
+				mask: url("#{$heart-mask-3}") no-repeat center / contain;
+			}
 
 			// Now apply different random-ish top/left for each item
 			.color_item:nth-child(1) {
