--- a/client/react-app/styles/sections/HeroSection.scss
+++ b/client/react-app/styles/sections/HeroSection.scss
@@ -45,7 +45,7 @@
 			height: 100vh;
 			padding: 0 4vw;
 		}
-	
+
 		@media screen and (max-width: 576px) {
 			padding: 0 2vw;
 		}
@@ -57,7 +57,6 @@
 			@media screen and (max-width: 576px) {
 				gap: 10px;
 			}
-			
 		}
 
 		.hero_content_dear {
@@ -99,6 +98,12 @@
 			font-weight: normal;
 			font-size: 1.6em;
 			line-height: 120%;
+			span {
+				font-weight: bold;
+				display: inline-block;
+				transform: scale(1.2);
+				padding: 10px 0;
+			}
 			@media screen and (max-width: 1500px) {
 				font-size: 1.5em;
 			}
@@ -193,12 +198,16 @@
 	.falling_hearts {
 		position: absolute;
 		top: 0;
-		left: 0;
-		width: 100vw;
+		left: -20px;
+		width: calc(100vw + 20px);
 		height: 100vh;
 		/* or another fixed height */
 		overflow: hidden;
 		pointer-events: none;
 		z-index: 10;
+		@media screen and (max-width: 768px) {
+			top: -40px;
+			height: calc(100vh + 40px);
+		}
 	}
 }
